# polyfollow

./: .gitignore  Cargo.toml  PLAN.md  README.md  README.zh-CN.md
.github/workflows/: ci.yml  release.yml
src/: allocation.rs  app.rs  backtest.rs  chain.rs  cli.rs  config.rs  cooldown.rs  dashboard.rs  engine.rs  execution.rs  main.rs  market.rs  marketbridge.rs  monitor.rs  notify.rs  polyalpha.rs  server.rs  storage.rs  types.rs  validate.rs  watch.rs
src/app/: admin.rs  follow.rs  leaders.rs  mod.rs  reports.rs  responses.rs  support.rs
src/cli/: leaders.rs  mod.rs  tests.rs  tools.rs  watchers.rs
src/config/: defaults.rs  leaders.rs  mod.rs  store.rs  tests.rs  validation.rs
src/engine/: context.rs  intent.rs  mod.rs  tests.rs
src/storage/: ledger.rs  live_tests.rs  mod.rs  queries.rs  risk.rs  rows.rs  schema.rs  tests.rs  writes.rs
